# cobalt

./: .readthedocs.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
cobalt/: __init__.py  act.py  akn.py  amendment.py  collection.py  debate.py  hierarchical.py  judgment.py  openstructure.py  portion.py  render.py  schemas.py  toc.py  uri.py
cobalt/xsd/: akomantoso30-lenient.xsd  xml.xsd
cobalt/xsl/: act_text.xsl
docs/: api.rst  conf.py  index.rst
tests/: __init__.py  test_act.py  test_attachments.py  test_debate.py  test_judgment.py  test_structured_document.py  test_uri.py
